fix(Field.Upload): align help background (#7717)
Motivation:
https://dnb-it.slack.com/archives/C04NL73S2Q5/p1776766051001039?thread_ts=1776693568.694639&cid=C04NL73S2Q5
Preview:
https://fix-upload-help.eufemia-e25.pages.dev/uilib/extensions/forms/feature-fields/more-fields/Upload/demos/#with-help

--- a/packages/dnb-eufemia/src/extensions/forms/Field/Upload/style/dnb-upload.scss
+++ b/packages/dnb-eufemia/src/extensions/forms/Field/Upload/style/dnb-upload.scss
@@ -1,13 +1,15 @@
+@use '../../../../../style/core/utilities.scss' as utilities;
+
 .dnb-forms-field-upload {
   .dnb-help-button__content {
     .dnb-section {
+      --outset: 1; // Enable outset
       --outset-left: calc(var(--spacing-medium));
       --outset-right: calc(var(--spacing-medium));
 
-      margin-left: var(--upload-border-width);
-      margin-right: var(--upload-border-width);
-      &::before {
-        z-index: 0;
+      @include utilities.allBelow(small) {
+        --outset-left: calc(var(--spacing-small));
+        --outset-right: calc(var(--spacing-small));
       }
     }
   }
